@@ -5,22 +5,23 @@ import org.json.JSONObject;
 import tfprio.TFPRIO;
 import util.Configs.ConfigTypes.AbstractConfig;
 import util.Configs.ConfigTypes.GeneratedFileStructure;
+import util.Logger;
 
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+import java.util.concurrent.ExecutorService;
 
-import static util.FileManagement.writeFile;
+import static util.FileManagement.*;
 
 public class Generate extends ExecutableStep
 {
     AbstractConfig<File> f_input_transcriptionFactors = TFPRIO.configs.distributionAnalysis.fileStructure.f_dcg_stats;
     GeneratedFileStructure f_output_reportJson = TFPRIO.configs.angularReport.fileStructure.f_data;
+    GeneratedFileStructure d_output_data = TFPRIO.configs.angularReport.fileStructure.d_data;
+
 
     @Override protected Set<AbstractConfig<File>> getRequiredFileStructure()
     {
@@ -29,7 +30,7 @@ public class Generate extends ExecutableStep
 
     @Override public Set<GeneratedFileStructure> getCreatedFileStructure()
     {
-        return new HashSet<>(List.of(f_output_reportJson));
+        return new HashSet<>(Arrays.asList(f_output_reportJson, d_output_data));
     }
 
     @Override protected Set<AbstractConfig<?>> getRequiredConfigs()
@@ -57,9 +58,10 @@ public class Generate extends ExecutableStep
 
                 String symbol = split[1];
 
-                TranscriptionFactorGroup transcriptionFactorGroup = new TranscriptionFactorGroup(symbol, logger);
+                TranscriptionFactorGroup transcriptionFactorGroup =
+                        new TranscriptionFactorGroup(symbol, logger, executorService);
                 transcriptionFactorGroups.add(transcriptionFactorGroup);
-                executorService.submit(transcriptionFactorGroup::collectData);
+                transcriptionFactorGroup.collectData();
             }
         } catch (IOException e)
         {
@@ -67,16 +69,25 @@ public class Generate extends ExecutableStep
         }
         finishAllQueuedThreads();
         saveJson(transcriptionFactorGroups);
+
+        softLink(TFPRIO.configs.angularReport.d_dataLink.get(), TFPRIO.configs.angularReport.fileStructure.d_root.get(),
+                logger);
+
     }
 
     private void saveJson(List<TranscriptionFactorGroup> transcriptionFactorGroups)
     {
         JSONObject jsonObject = new JSONObject();
 
+        List<JSONObject> tfGroupObjects = new ArrayList<>();
+
         for (TranscriptionFactorGroup transcriptionFactorGroup : transcriptionFactorGroups)
         {
-            jsonObject.put(transcriptionFactorGroup.name, transcriptionFactorGroup.toJSONObject());
+            tfGroupObjects.add(transcriptionFactorGroup.toJSONObject());
         }
+
+        jsonObject.put("configs", TFPRIO.configs.getConfigsJSONObject(true));
+        jsonObject.put("transcriptionFactorGroups", tfGroupObjects);
 
         try
         {
@@ -84,6 +95,37 @@ public class Generate extends ExecutableStep
         } catch (IOException e)
         {
             logger.error(e.getMessage());
+        }
+    }
+
+    public static void linkFiles(JSONObject map, File d_target, ExecutorService executorService, Logger logger)
+            throws IOException
+    {
+        for (String key : map.keySet())
+        {
+            File newTarget = extend(d_target, key);
+
+            Object value = map.get(key);
+
+            if (value.getClass().equals(String.class))
+            {
+                File sourceFile = new File((String) value);
+                String extension = sourceFile.getName().substring(sourceFile.getName().lastIndexOf("."));
+
+                File targetFile = new File(newTarget.getAbsolutePath() + extension);
+
+                executorService.submit(() -> softLink(targetFile, sourceFile, logger));
+
+                map.put(key, targetFile.getAbsolutePath()
+                        .replace(TFPRIO.configs.angularReport.fileStructure.d_data.get().getAbsolutePath(), ""));
+
+            } else if (value.getClass().equals(JSONObject.class))
+            {
+                linkFiles((JSONObject) value, newTarget, executorService, logger);
+            } else
+            {
+                throw new IllegalArgumentException("Illegal map structure detected");
+            }
         }
     }
 }
